<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sleepingbear.vhdictandvoc.MainActivity">
    <item android:id="@+id/action_web" android:title="@string/action_web"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_white_24dp"/>
    <item android:id="@+id/action_tts" android:title="@string/action_tts"
        android:orderInCategory="200" app:showAsAction="never"
        android:icon="@drawable/ic_hearing_white_24dp"/>
    <item android:id="@+id/action_help" android:title="@string/action_help"
        android:orderInCategory="300" app:showAsAction="never"
        android:icon="@drawable/ic_help_outline_white_24dp"/>
</menu>
